--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body>
     <!-- user input -->
     <label for="userInput">Input</label>
-    <input type="text" name="first" id="userInputOne">
-    <input type="text" name="second" id="userInputTwo" >
-    <button class="add">Add</button>
+    <input type="text" name="first" id="UserInputOne">
+    <input type="text" name="second" id="UserInputTwo" >
+    <button class="add" id="btn">Sub</button>
 
-    <div class="output"></div>
+    <div >
+        <span style="margin-top: 50px;">TOTAL: </span>
+        <span id="output">some text</span>
+    </div>
 
     <!-- <script src="./index.js"></script> -->
-    <script src="./calculator.js"></script>
+    <!-- <script src="./add.js"></script> -->
+    <script src="./subtract.js"></script>
 </body>
 </html>
