logic for clock alarm hours

--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
         <div class="seconds">00</div>
         <div class="format">AM</div>
     </div>
+
+
+    <select name="hour" id="hourSelect">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="11">12</option>
+    </select>
+    <select name="hour" id="dayPart">
+        <option value="AM">AM</option>
+        <option value="PM">PM</option>
+    </select>
+    <button id="select">Set Alarm</button>
     
     <script src="./main.js"></script>
 </body>
