--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     
-    <div class="clock">
+    <!-- <div class="clock">
         <div class="hours">00</div>
         <div class="minutes">00</div>
         <div class="seconds">00</div>
         <div class="format">AM</div>
-    </div>
+    </div> -->
 
 
-    <select name="hour" id="hourSelect">
+    <!-- <select name="hour" id="hourSelect">
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
@@ -30,13 +30,20 @@
         <option value="10">10</option>
         <option value="11">11</option>
         <option value="11">12</option>
-    </select>
-    <select name="hour" id="dayPart">
+    </select> -->
+    <!-- <select name="hour" id="dayPart">
         <option value="AM">AM</option>
         <option value="PM">PM</option>
     </select>
-    <button id="select">Set Alarm</button>
+    <button id="select">Set Alarm</button> -->
+
+    <input id="factorial"/>
+    <button id="factorialBT">Get Factorial</button>
+
+    <div class="factorialValue"></div> 
+
     
-    <script src="./main.js"></script>
+    <!-- <script src="./main.js"></script> -->
+    <script src="./factorial.js"></script>
 </body>
 </html>
