--- a/index.html
+++ b/index.html
@@ -1,60 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    <div class="overlay">
-        <div class="weatherDetails">
-            <div class="weather">
-                <div class="city">
-                    Shimla
-                </div>
-                <div class="temp">
-                    9
-                </div>
-                
-            </div>
-            <div class="info">
-                clear sky
-            </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Tic-tac-toe</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
+        <div class="sibling">Hello</div>
+        <div class="container">
+            <input type="text" id="one">
+            <input type="text" id="two">
+            <input type="text" id="three">
+            <input type="text" id="four">
+            <input type="text" id="five">
+            <input type="text" id="six">
+            <input type="text" id="seven">
+            <input type="text" id="eight">
+            <input type="text" id="nine">
         </div>
-    </div>
+        <div class="infoContainer">
+            Player one: X <br /> <br />
+            Player two: O
+        </div>
+        <button class="reset">reset board</button>
 
-    <div class="container">
-        <div class="humidity">
-            <div class="humidityInfo">
-                60%
-            </div>
-            <div class="humidityTitle">
-                Humidity
-            </div>
-        </div>
-        <div class="visibility">
-            <div class="visibilityInfo">
-                60%
-            </div>
-            <div class="visibilityTitle">
-                Visibility
-            </div>
-        </div>
-        <div class="some">
-            <div class="someInfo">
-                60%
-            </div>
-            <div class="someInfoTitle">
-               some 
-            </div>
-        </div>
-        
-    </div>
-    <script src="./main.js"></script>
-</body>
+        <script src="./main.js"></script>
+    </body>
 </html>
